Fixed text alignment for FAQ

--- a/src/App.css
+++ b/src/App.css
@@ -399,6 +399,7 @@ body {
   color: var(--purple);
   display: flex;
   align-items: center;
+  text-align: left;
 }
 
 .faqHead:hover,
